sonarqube/deploy_postgres.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: sonar
  name: postgres
  labels: 
    app: postgres
    purpose: storage
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector: 
    matchLabels:
      app: postgres
  template:
    metadata:
       name: postgres-data-pod
       labels: 
          app: postgres
          purpose: storage
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 20
      containers:
      -  image: postgres:9.6-bullseye
         imagePullPolicy: IfNotPresent
         name: postgres-container
         resources:
          requests:
            cpu: 500m
            memory: 600Mi
          limits:
            cpu: 500m
            memory: 600Mi
         livenessProbe:
           initialDelaySeconds: 20
           tcpSocket:
             port: 5432
           timeoutSeconds: 1
         ports:
         - name: postgres-open
           containerPort: 5432
           hostPort: 5432
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data-pvc
