sonarqube/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonar
spec:
  rules:
  - host: sonar.cicd.com
    http:
      paths:
      - backend:
          service:
            name: sonarqube-svc
            port: 
              name: sonarqube-http
              #number: 80
        path: /
        pathType: Prefix
